--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.TasksListActivity" android:configChanges="keyboardHidden|orientation|screenSize"  />
-        <activity android:name=".activity.TaskDetailsActivity" android:windowSoftInputMode="stateHidden"  />
-        <activity android:name=".activity.TaskNewActivity" android:windowSoftInputMode="adjustResize"/>
+        <activity android:name=".activity.TaskDetailsActivity"  android:configChanges="keyboardHidden|orientation|screenSize"
+            android:windowSoftInputMode="stateHidden"  />
+        <activity android:name=".activity.TaskNewActivity" android:windowSoftInputMode="adjustResize" android:configChanges="keyboardHidden|orientation|screenSize"/>
     </application>
 
 </manifest>
