--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,6 @@ apply plugin: 'com.neenbedankt.android-apt'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
-
-
     defaultConfig {
         applicationId "com.codefish.android.taskmanager"
         minSdkVersion 19
@@ -30,7 +28,6 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
 
-
     }
     buildTypes {
         release {
@@ -38,10 +35,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+        cfProd {
+            buildConfigField 'String', 'HOST', '"http://codefishserver.com:8282/CodefishServer/mvc/"'
+        }
+        cfDev {
+            buildConfigField 'String', 'HOST', '"http://10.0.0.2:8080/CodefishTestServer/mvc/"'
+        }
+        ach {
+            buildConfigField 'String', 'HOST', '"http://hrportal.ac-holding.net:8181/ACHoldingServer/mvc/"'
+        }
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
@@ -58,12 +66,10 @@ dependencies {
     compile 'com.android.support:support-annotations:24.2.1'
     compile 'com.github.clans:fab:1.6.4'
     compile 'com.prolificinteractive:material-calendarview:1.4.0'
-
     androidTestCompile 'com.android.support.test:runner:0.3'
     androidTestCompile 'com.android.support.test:rules:0.3'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
     androidTestCompile 'com.android.support:support-annotations:24.2.1'
-
     // add this for intent mocking support
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2'
     // add this for webview testing support
