Project due date, auto fill leave dates, app version, added remove to project due date, changed color of task list controls Fixes : fixed smart date to reflect two different dates with diff month by comparing day of year instead of day of month

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ android {
             buildConfigField 'String', 'HOST', '"http://codefishserver.com:8282/CodefishTestServer/mvc/"'
         }
         ach {
-            buildConfigField 'String', 'HOST', '"http://hrportal.ac-holding.net:8181/ACHoldingServer/mvc/"'
+            buildConfigField 'String', 'HOST', '"https://portal.ac-holding.net/ACHoldingServer/mvc/"'
         }
     }
 }
