--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,13 @@ dependencies {
     compile 'com.android.support:support-annotations:24.2.1'
     compile 'com.github.clans:fab:1.6.4'
     compile 'com.prolificinteractive:material-calendarview:1.4.0'
+
+    compile 'com.karumi:headerrecyclerview:1.1.0'
+
+    compile 'com.google.firebase:firebase-core:9.8.0'
+    compile 'com.google.firebase:firebase-messaging:9.8.0'
+    compile 'com.google.android.gms:play-services-base:9.8.0'
+
     androidTestCompile 'com.android.support.test:runner:0.3'
     androidTestCompile 'com.android.support.test:rules:0.3'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
@@ -81,3 +88,5 @@ dependencies {
         transitive = true;
     }
 }
+
+apply plugin: 'com.google.gms.google-services'
