--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
         applicationId "com.codefish.android.taskmanager"
         minSdkVersion 19
         targetSdkVersion 23
-        versionCode 6
-        versionName "1.5.8"
+        versionCode 8
+        versionName "1.7.8"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
 
@@ -40,7 +40,7 @@ android {
             buildConfigField 'String', 'HOST', '"http://codefishserver.com:8282/CodefishServer/mvc/"'
         }
         cfDev {
-            buildConfigField 'String', 'HOST', '"http://10.0.0.2:8080/CodefishTestServer/mvc/"'
+            buildConfigField 'String', 'HOST', '"http://10.0.0.2:8080/ACHoldingServer/mvc/"'
         }
         cfDevCloud {
             buildConfigField 'String', 'HOST', '"http://codefishserver.com:8282/CodefishTestServer/mvc/"'
@@ -65,17 +65,13 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.android.support:support-annotations:24.2.1'
     compile 'com.github.clans:fab:1.6.4'
     compile 'com.prolificinteractive:material-calendarview:1.4.0'
-
-    compile 'com.karumi:headerrecyclerview:1.1.0'
-
+    compile 'com.github.delight-im:Android-AdvancedWebView:v3.0.0'
     compile 'com.google.firebase:firebase-core:9.8.0'
     compile 'com.google.firebase:firebase-messaging:9.8.0'
     compile 'com.google.android.gms:play-services-base:9.8.0'
-
     androidTestCompile 'com.android.support.test:runner:0.3'
     androidTestCompile 'com.android.support.test:rules:0.3'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
@@ -84,9 +80,12 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2'
     // add this for webview testing support
     androidTestCompile 'com.android.support.test.espresso:espresso-web:2.2'
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.2@aar') {
-        transitive = true;
-    }
+        compile('com.crashlytics.sdk.android:crashlytics:2.6.6@aar') {
+
+            transitive = true;
+
+        }
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
