--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,14 +17,14 @@ repositories {
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.codefish.android.taskmanager"
         minSdkVersion 19
-        targetSdkVersion 23
-        versionCode 8
-        versionName "1.7.8"
+        targetSdkVersion 25
+        versionCode 9
+        versionName "1.8.8"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
 
@@ -48,38 +48,44 @@ android {
         ach {
             buildConfigField 'String', 'HOST', '"https://portal.ac-holding.net/ACHoldingServer/mvc/"'
         }
+        achTest {
+            buildConfigField 'String', 'HOST', '"https://portal.ac-holding.net/ACHoldingServerTest/mvc/"'
+        }
+        ahmadDev {
+            buildConfigField 'String', 'HOST', '"http://10.10.10.132:8080/ACHoldingServer/mvc/"'
+        }
     }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:design:25.2.0'
     compile 'com.google.dagger:dagger:2.0.2'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'javax.inject:javax.inject:1'
     compile 'javax.annotation:javax.annotation-api:1.2'
     apt 'com.google.dagger:dagger-compiler:2.0'
-    compile 'com.google.guava:guava:19.0'
-    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.google.guava:guava:20.0'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.android.support:support-annotations:24.2.1'
+    compile 'com.android.support:support-annotations:25.2.0'
     compile 'com.github.clans:fab:1.6.4'
     compile 'com.prolificinteractive:material-calendarview:1.4.0'
     compile 'com.github.delight-im:Android-AdvancedWebView:v3.0.0'
     compile 'com.google.firebase:firebase-core:9.8.0'
     compile 'com.google.firebase:firebase-messaging:9.8.0'
     compile 'com.google.android.gms:play-services-base:9.8.0'
-    androidTestCompile 'com.android.support.test:runner:0.3'
-    androidTestCompile 'com.android.support.test:rules:0.3'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
-    androidTestCompile 'com.android.support:support-annotations:24.2.1'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:rules:0.5'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestCompile 'com.android.support:support-annotations:25.2.0'
     // add this for intent mocking support
-    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2'
+    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
     // add this for webview testing support
-    androidTestCompile 'com.android.support.test.espresso:espresso-web:2.2'
+    androidTestCompile 'com.android.support.test.espresso:espresso-web:2.2.2'
         compile('com.crashlytics.sdk.android:crashlytics:2.6.6@aar') {
 
             transitive = true;
